<resources>
    <string name="app_name">My C alculator</string>
    <string name="key_c">C</string>
    <string name="key_min_or_plus">+/-</string>
    <string name="key_percent">%</string>
    <string name="key_division">/</string>
    <string name="key__7">7</string>
    <string name="key__8">8</string>
    <string name="key__9">9</string>
    <string name="key_x">x</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_min">-</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_plus">+</string>
    <string name="key_0">0</string>
    <string name="key_comma_sign">,</string>
    <string name="key_equally">=</string>
    <string name="key_del">dl</string>
    <string name="setting">настройки</string>
    <string name="them_light">светлый экран</string>
    <string name="them_dark">темный экран</string>
    <string name="calc">калькулятор</string>
    <string name="text_secondAct">Выберите тему калькулятора</string>
</resources>